# cpsc4160-game

./: CMakeLists.txt  CMakeSettings.json  README.md
Cpsc4160Game/: main.cpp
assets/: tilemap.csv
cmake/: FindSDL2_ttf.cmake
src/: CMakeLists.txt  camera.cpp  camera.h  character.cpp  character.h  character_sprite_handler.cpp  character_sprite_handler.h  character_state.h  collidable.h  collision_handler.cpp  collision_handler.h  command.h  constants.h  direction.h  game_engine.cpp  game_engine.h  game_object.cpp  game_object.h  graphics_handler.cpp  graphics_handler.h  input_handler.cpp  input_handler.h  main.cpp  movement.h  particle.cpp  particle.h  player.cpp  player.h  position.h  rat.cpp  rat.h  sprite.cpp  sprite.h  tile_handler.cpp  tile_handler.h  tree.cpp  tree.h  ui_handler.cpp  ui_handler.h  utils.cpp  (+2 more)
src/input/: command.h  input_handler.cpp  input_handler.h
